# substrait-distill

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
rules/filter_pushdown/: aggregate.py  app.py  cross.py  helpers.py  join.py  merge.py  passthrough.py  project.py  projection.py  read.py  set_op.py
rules/predicate_simplification/: app.py  simplify.py
rules/rel_rules/: app.py  helpers.py
rules/rel_rules/filter_pushdown/: join.py  passthrough.py  project.py  set_op.py
rules/rel_rules/projection_pruning/: cross.py  fetch.py  filter.py  join.py  projection.py  set_op.py  sort.py
rules/rel_rules/simplification/: project.py
scripts/: build.sh
src/distill/: __init__.py  manager.py
tests/: conftest.py  test_filter_pushdown.py  test_manager.py  test_predicate_simplification.py
tests/rules/: test_filter_merge.py  test_filter_pushdown_aggregate.py  test_filter_pushdown_cross.py  test_filter_pushdown_cross_conjunction.py  test_filter_pushdown_fetch.py  test_filter_pushdown_join.py  test_filter_pushdown_project.py  test_filter_pushdown_read.py  test_filter_pushdown_set.py  test_filter_pushdown_sort.py  test_identity_project_removal.py  test_passthrough.py  test_projection_pruning.py  test_projection_pruning_cross.py  test_projection_pruning_fetch.py  test_projection_pruning_filter.py  test_projection_pruning_join.py  test_projection_pruning_set.py  test_projection_pruning_sort.py
wit/: world.wit
