[project]
name = "distill"
version = "0.1.0"
description = "Substrait logical plan optimizer using WASM Component Model"
readme = "README.md"
authors = [
    { name = "tokoko", email = "togurgenidze@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "substrait[extensions]>=0.27.0",
    "wasmtime>=41.0.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
extraPaths = ["rules/filter_pushdown/bindings"]

[dependency-groups]
dev = [
    "componentize-py>=0.19.3",
    "pytest>=9.0.2",
]
